package unipa.fooddelivery.models;

/**
 * Model POJO class for Customer
 */
public class Customer extends User {

    
    public Customer() {
        super();
    }

    public Customer(String username, String password) {
        super(username, password);
    }
}